src/k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: path-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
        - pathType: Prefix #ou Exec
          path: "/web"
          backend:
            service:
              name: web
              port: 
                number: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dominio-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: web.127.0.0.1.nip.io 
      http:
        paths:
        - pathType: Prefix #ou Exec
          path: /
          backend:
            service:
              name: web
              port: 
                number: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: padrao-ingress
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: mongo-express
      port:
        number: 8081
